// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete Platform List Component test four platforms 1`] = `
<div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test?200x200"
      />
      <div>
        <h4>
          test
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test2?200x200"
      />
      <div>
        <h4>
          test2
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test3?200x200"
      />
      <div>
        <h4>
          test3
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test4?200x200"
      />
      <div>
        <h4>
          test4
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
</div>
`;

exports[`Delete Platform List Component test no platform 1`] = `<div />`;

exports[`Delete Platform List Component test three platforms 1`] = `
<div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test?200x200"
      />
      <div>
        <h4>
          test
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test2?200x200"
      />
      <div>
        <h4>
          test2
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
  <div
    className="deleteList"
  >
    <div
      className="platformStyle grow"
      onClick={[Function]}
    >
      <img
        alt="platformImage"
        src="https://robohash.org/test3?200x200"
      />
      <div>
        <h4>
          test3
        </h4>
      </div>
    </div>
    <button
      className="deleteButton"
      onClick={[Function]}
    >
      <img
        alt="delete"
        height="40px"
        src="delete.png"
        width="40px"
      />
    </button>
  </div>
</div>
`;
